--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node":"v6.11.3"
+    "node":"6.9.4"
   },
   "author": "",
   "license": "ISC",
